# RADIANT

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: phase_g.yaml  radiant_75m.json  radiant_base.json  radiant_tiny.json
configs/chem/: chembl_property_small.json
examples/: ablate_loop_count.py  analyze_loop_dynamics.py  baseline_transformer.py  forward_pass.py  generate.py  train_chem_property.py  train_lm_synthetic.py
examples/data/: sample_chembl.csv
radiant/: __init__.py  attention.py  block.py  confidence_halting.py  config.py  exit_decoder.py  feedforward.py  heads.py  iteration_adapter.py  iteration_signal.py  metrics.py  model.py  norms.py  positional.py  presets.py  refinement_core.py  state_anchor.py  stem_encoder.py  utils.py
radiant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
radiant_chem/: __init__.py  augment.py  config.py  dataset.py  depth_pool.py  fingerprint.py  model_chem.py  objectives.py  splits.py  tasks.py  tokenizer.py
radiant_qsar/: __init__.py
radiant_qsar/analyses/: __init__.py  build_calibration_input.py  common.py  g0_validation_metrics.py  g1_depth_vs_complexity.py  g3_calibration.py  g4_test_time_loop_sweep.py  g5_atom_attribution.py  g_activity_cliff_sar.py  g_applicability_domain.py  g_calibration_extensions.py  g_compute_parity.py  g_confidence_filter.py  g_failure_modes.py  g_halting_toggle.py  g_hard_splits.py  g_pairwise_wins.py  g_per_split_winrate.py  g_pretrain_curves.py  g_ranks.py  g_rgroup_ablation.py  g_rgroup_sar.py  g_scaffold_novelty.py  g_smiles_consistency.py  g_stage1_representation_probe.py  g_stat_tests.py  g_target_family.py  g_training_curves.py  leakage_audit.py  run_phase_g.py  statistical_significance.py
radiant_qsar/baselines/: __init__.py  _hf_shared.py  gin.py  (+3 more)
tests/: conftest.py  test_attention.py  test_block.py  test_confidence_halting.py  test_config.py  test_feedforward.py  test_gradient_flow.py  test_independence.py  test_iteration_adapter.py  test_iteration_signal.py  test_loop_count.py  test_loop_schedule.py  test_metrics.py  test_model_shapes.py  test_moe.py  test_norms.py  test_positional.py  test_presets.py  test_refinement_core.py  test_state_anchor.py  test_trainer.py
tools/: build_final_figures.py
training/: __init__.py  analysis.py  callbacks.py  loop_schedule.py  trainer.py
(+82 files in other folders)
